@@ -3541,3 +3541,36 @@ m68k_hard_regno_rename_ok (unsigned int old_reg ATTRIBUTE_UNUSED,
 
   return 1;
 }
+
+/* Value is true if hard register REGNO can hold a value of machine-mode MODE.
+   On the 68000, the cpu registers can hold any mode except bytes in address
+   registers, but the 68881 registers can hold only SFmode or DFmode.  */
+bool
+m68k_regno_mode_ok (int regno, enum machine_mode mode)
+{
+  if (regno < 8)
+    {
+	/* Data Registers, can hold aggregate if fits in.  */
+	if (regno + GET_MODE_SIZE (mode) / 4 <= 8)
+	  return true;
+    }
+  else if (regno < 16)
+    {
+	/* Address Registers, can't hold bytes, can hold aggregate if
+	   fits in.  */
+	if (GET_MODE_SIZE (mode) == 1)
+	  return false;
+	if (regno + GET_MODE_SIZE (mode) / 4 <= 16)
+	  return true;
+    }
+  else if (regno < 24)
+    {
+      /* FPU registers, hold float or complex float of long double or
+	   smaller.  */
+	if ((GET_MODE_CLASS (mode) == MODE_FLOAT
+	     || GET_MODE_CLASS (mode) == MODE_COMPLEX_FLOAT)
+	    && GET_MODE_UNIT_SIZE (mode) <= 12)
+	  return true;
+    }
+  return false;
+}
